<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QueryUser">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/EditAccount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:text="@string/EditAccount"/>
        <TextView
            android:id="@+id/EditPassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:text="@string/EditPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/Editaccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></ListView>

        <ListView
            android:id="@+id/Editpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></ListView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/backtomainquery"
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>