<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePrice">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/ypbh"/>
        <EditText
            android:id="@+id/ypbh_changeprice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    <Button
        android:id="@+id/submit_ypbh"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="确定"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:id="@+id/ypxx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="修改进价为："
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:layout_weight="1"
            android:id="@+id/setjprice"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:layout_weight="1"
            android:id="@+id/tjjj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agree"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="修改售价为："
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:layout_weight="1"
            android:id="@+id/setsprice"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:layout_weight="1"
            android:id="@+id/tjsj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agree"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/backtomainchangeprice"
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>